overflow problem solved

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 * {
   scroll-behavior: smooth;
+  overflow: hidden;
 }
 
 .app-container {
